<resources>
    <string name="app_name">Bulkcor 2.0</string>
    <string name="login_welcome">Welcome To</string>
    <string name="login_company_name">Bulkcor Trading LLC</string>
    <string name="login_subtitle">Login to your account</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_sign_in">Sign In</string>
    <string name="dashboard_menu_icon_desc">Dashboard menu icon</string>
    <string name="dashboard_exit_desc">Exit dashboard</string>
    <string name="profile_name">Apps Admin</string>
    <string name="profile_date">May 16, 2026 \u2022 10:47 AM</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="home_desc">Home icon</string>
    <string name="customer_list_desc">Customer list icon</string>
    <string name="order_placement_desc">Order placement icon</string>
    <string name="password_change_desc">Password change icon</string>
    <string name="logout_desc">Logout icon</string>
    <string name="menu_order">Order</string>
    <string name="menu_pre_order">Pre Order</string>
    <string name="menu_collection">Collection</string>
    <string name="menu_sales_return">Sales Return</string>
    <string name="order_icon_desc">Order icon</string>
    <string name="preorder_icon_desc">Pre Order icon</string>
    <string name="collection_icon_desc">Collection icon</string>
    <string name="salesreturn_icon_desc">Sales Return icon</string>
</resources>